added Chaco graph pictures

--- a/CovidDataAnalisys.ipynb
+++ b/CovidDataAnalisys.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -549,42 +549,39 @@
     "\n",
     "\n",
     "#### From here is the code to write the graphs ####\n",
-    "#first line to export to pdf\n",
-    "with PdfPages(r'C:\\Users\\paulo\\Documents\\Paulo\\Covid19_Data\\OfficialGraph\\Charts.pdf') as export_pdf:\n",
-    "    fig, cases = plt.subplots(figsize=(30, 10))\n",
-    "    cases.plot(updated, chaco_deaths, label=\"deaths cases\")\n",
-    "    cases.plot(updated, chaco_confirmed, label=\"confirmed cases\")\n",
-    "    cases.legend()\n",
-    "    cases.set_title(\"Chaco confirmed and deaths cases\")\n",
+    "fig, cases = plt.subplots(figsize=(30, 10))\n",
+    "cases.plot(updated, chaco_deaths, label=\"deaths cases\")\n",
+    "cases.plot(updated, chaco_confirmed, label=\"confirmed cases\")\n",
+    "cases.legend()\n",
+    "cases.set_title(\"Chaco confirmed and deaths cases\")\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\ChacoData.png')\n",
     "\n",
-    "    fig, per = plt.subplots(figsize=(30, 10))\n",
-    "    per.plot(updated, chaco_deathsPer, label = \"Chaco deaths %\")\n",
-    "    per.plot(updated, ArgCountry_deathsPer, label='Arg deaths %')\n",
-    "    per.legend()\n",
-    "    per.set_title(\"Compare death percentages for Arg and Chaco\")\n",
+    "fig, per = plt.subplots(figsize=(30, 10))\n",
+    "per.plot(updated, chaco_deathsPer, label = \"Chaco deaths %\")\n",
+    "per.plot(updated, ArgCountry_deathsPer, label='Arg deaths %')\n",
+    "per.legend()\n",
+    "per.set_title(\"Compare death percentages for Arg and Chaco\")\n",
     "\n",
-    "    fig, change = plt.subplots(figsize=(30, 10))\n",
-    "    change.bar(updated, chaco_confirmedChange, label = \"confirmed changes\")\n",
-    "    change.bar(updated, chaco_deathsChange, label = \"changes\")\n",
-    "    change.legend()\n",
-    "    change.set_title(\"Daily increase of confirmed cases and deaths in Chaco\")\n",
+    "fig, change = plt.subplots(figsize=(30, 10))\n",
+    "change.bar(updated, chaco_confirmedChange, label = \"confirmed changes\")\n",
+    "change.bar(updated, chaco_deathsChange, label = \"changes\")\n",
+    "change.legend()\n",
+    "change.set_title(\"Daily increase of confirmed cases and deaths in Chaco\")\n",
     "\n",
-    "    fig, cases_ArgCountry = plt.subplots(figsize=(30, 10))\n",
-    "    cases_ArgCountry.plot(updated, ArgCountry_deaths, label=\"deaths cases\")\n",
-    "    cases_ArgCountry.plot(updated, ArgCountry_confirmed, label=\"confirmed cases\")\n",
-    "    cases_ArgCountry.plot(updated, ArgCountry_recovered, label=\"recovered cases\")\n",
-    "    cases_ArgCountry.legend()\n",
-    "    cases_ArgCountry.set_title(\"Argentina confirmed and deaths cases\")\n",
+    "fig, cases_ArgCountry = plt.subplots(figsize=(30, 10))\n",
+    "cases_ArgCountry.plot(updated, ArgCountry_deaths, label=\"deaths cases\")\n",
+    "cases_ArgCountry.plot(updated, ArgCountry_confirmed, label=\"confirmed cases\")\n",
+    "cases_ArgCountry.plot(updated, ArgCountry_recovered, label=\"recovered cases\")\n",
+    "cases_ArgCountry.legend()\n",
+    "cases_ArgCountry.set_title(\"Argentina confirmed and deaths cases\")\n",
     "\n",
-    "    fig, change_ArgCountry = plt.subplots(figsize=(30, 10))\n",
-    "    change_ArgCountry.bar(updated, ArgCountry_confirmedChange, label = \"confirmed changes\")\n",
-    "    change_ArgCountry.bar(updated, ArgCountry_recoveredChange, label = \"recovered changes\")\n",
-    "    change_ArgCountry.bar(updated, ArgCountry_deathsChange, label = \"changes\")\n",
-    "    change_ArgCountry.legend()\n",
-    "    change_ArgCountry.set_title(\"Daily increase of confirmed, recoveries and deaths cases in Argentina\")\n",
-    "    \n",
-    "    #export to pdf\n",
-    "    export_pdf.savefig()\n",
+    "fig, change_ArgCountry = plt.subplots(figsize=(30, 10))\n",
+    "change_ArgCountry.bar(updated, ArgCountry_confirmedChange, label = \"confirmed changes\")\n",
+    "change_ArgCountry.bar(updated, ArgCountry_recoveredChange, label = \"recovered changes\")\n",
+    "change_ArgCountry.bar(updated, ArgCountry_deathsChange, label = \"changes\")\n",
+    "change_ArgCountry.legend()\n",
+    "change_ArgCountry.set_title(\"Daily increase of confirmed, recoveries and deaths cases in Argentina\")\n",
+    "\n",
     "\n",
     "#Graph that sorts the provinces with confirmed cases\n",
     "\n",
