Added all graphs

--- a/CovidDataAnalisys.ipynb
+++ b/CovidDataAnalisys.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -561,12 +561,14 @@
     "per.plot(updated, ArgCountry_deathsPer, label='Arg deaths %')\n",
     "per.legend()\n",
     "per.set_title(\"Compare death percentages for Arg and Chaco\")\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\DeathPerArgChaco.png')\n",
     "\n",
     "fig, change = plt.subplots(figsize=(30, 10))\n",
     "change.bar(updated, chaco_confirmedChange, label = \"confirmed changes\")\n",
     "change.bar(updated, chaco_deathsChange, label = \"changes\")\n",
     "change.legend()\n",
     "change.set_title(\"Daily increase of confirmed cases and deaths in Chaco\")\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\ChacoDataBar.png')\n",
     "\n",
     "fig, cases_ArgCountry = plt.subplots(figsize=(30, 10))\n",
     "cases_ArgCountry.plot(updated, ArgCountry_deaths, label=\"deaths cases\")\n",
@@ -574,6 +576,7 @@
     "cases_ArgCountry.plot(updated, ArgCountry_recovered, label=\"recovered cases\")\n",
     "cases_ArgCountry.legend()\n",
     "cases_ArgCountry.set_title(\"Argentina confirmed and deaths cases\")\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\ArgData.png')\n",
     "\n",
     "fig, change_ArgCountry = plt.subplots(figsize=(30, 10))\n",
     "change_ArgCountry.bar(updated, ArgCountry_confirmedChange, label = \"confirmed changes\")\n",
@@ -581,7 +584,7 @@
     "change_ArgCountry.bar(updated, ArgCountry_deathsChange, label = \"changes\")\n",
     "change_ArgCountry.legend()\n",
     "change_ArgCountry.set_title(\"Daily increase of confirmed, recoveries and deaths cases in Argentina\")\n",
-    "\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\ArgDataBar.png')\n",
     "\n",
     "#Graph that sorts the provinces with confirmed cases\n",
     "\n",
@@ -596,10 +599,12 @@
     "bar_Arg.bar(province, province_confirmed, label = \"confirmed cases\")\n",
     "bar_Arg.legend()\n",
     "bar_Arg.set_title(\"Confirm cases by provinces\")\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\ProvincesBar.png')\n",
     "\n",
     "fig, pie_Arg = plt.subplots()\n",
     "pie_Arg.pie(province_confirmed, labels=province, autopct='%1.1f%%', shadow=True, startangle=90)\n",
     "pie_Arg.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+    "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\ProvincesPie.png')\n",
     "\n",
     "plt.show()\n",
     "\n",
