--- a/GraphsSampleCode.ipynb
+++ b/GraphsSampleCode.ipynb
@@ -327,6 +327,76 @@
     "plt.show()\n",
     "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\SampleGraph\\\\foo.png')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import csv\n",
+    "from datetime import date\n",
+    "\n",
+    "date_start = date(day = 10, month = 5, year = 2020) #this is the date we will use to start writing the graphs.\n",
+    "\n",
+    "updated = []\n",
+    "WW_RecoveredPer = []\n",
+    "WW_deathsPer = []\n",
+    "USA_RecoveredPer = []\n",
+    "USA_deathsPer = []\n",
+    "Arg_RecoveredPer = []\n",
+    "Arg_deathsPer = []\n",
+    "Canada_RecoveredPer = []\n",
+    "Canada_deathsPer = []\n",
+    "Spain_RecoveredPer = []\n",
+    "Spain_deathsPer = []\n",
+    "Italy_RecoveredPer = []\n",
+    "Italy_deathsPer = []\n",
+    "SKorea_RecoveredPer = []\n",
+    "SKorea_deathsPer = []\n",
+    "Japan_RecoveredPer = []\n",
+    "Japan_deathsPer = []\n",
+    "\n",
+    "with open('Countries_cal_data.csv', 'r') as csvfile:\n",
+    "    plots= csv.reader(csvfile, delimiter=',')\n",
+    "    for row in plots:\n",
+    "        if row[0] == 'Updated':\n",
+    "            pass\n",
+    "        else:\n",
+    "            temp = row[0].split('/')\n",
+    "            date_temp = date(month = int(temp[0]), day = int(temp[1]), year=int(temp[2]))\n",
+    "            if row[9] == \"Worldwide\":\n",
+    "                if date_temp >= date_start:\n",
+    "                    updated.append(date_temp.strftime('%m/%d'))\n",
+    "                    WW_RecoveredPer.append(row[8])\n",
+    "            if row[9] == \"United States\":\n",
+    "                if date_temp >= date_start:\n",
+    "                    USA_RecoveredPer.append(row[8])\n",
+    "            if row[9] == \"Argentina\":\n",
+    "                if date_temp >= date_start:\n",
+    "                    Arg_RecoveredPer.append(row[8])\n",
+    "            if row[9] == \"Canada\":\n",
+    "                if date_temp >= date_start:\n",
+    "                    Canada_RecoveredPer.append(row[8])\n",
+    "\n",
+    "\n",
+    "USA_RecoveredPer.pop()\n",
+    "Arg_RecoveredPer.pop()\n",
+    "\n",
+    "fig, per = plt.subplots(figsize=(40, 15))\n",
+    "per.plot(updated,WW_RecoveredPer, label='Worldwide')\n",
+    "per.plot(updated,USA_RecoveredPer, label='USA')\n",
+    "per.plot(updated,Arg_RecoveredPer, label='Argentina')\n",
+    "per.plot(updated,Canada_RecoveredPer, label='Canada')\n",
+    "\n",
+    "per.legend()\n",
+    "plt.title('Recovery rates percentages (recovered/confirmed)per day.')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Recovered percentage')\n",
+    "plt.show()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
