--- a/CovidDataAnalisys.ipynb
+++ b/CovidDataAnalisys.ipynb
@@ -618,7 +618,7 @@
     "per.plot(updated, chaco_deathsPer, label = \"Chaco deaths %\")\n",
     "per.plot(updated, ArgCountry_deathsPer, label='Arg deaths %')\n",
     "per.legend()\n",
-    "per.set_title(\"Compare death percentages for Arg and Chaco\", fontsize = 20)\n",
+    "per.set_title(\"Comparison death percentages for Arg and Chaco\", fontsize = 20)\n",
     "plt.savefig('C:\\\\Users\\\\paulo\\\\Documents\\\\Paulo\\\\Covid19_Data\\\\OfficialGraph\\\\DeathPerArgChaco.png')\n",
     "\n",
     "fig, change = plt.subplots(figsize=(30, 10))\n",
